overflowy hidden fixed

--- a/my-app/static/generalstyle.scss
+++ b/my-app/static/generalstyle.scss
@@ -19,7 +19,6 @@
 
 body {
 	background: var(--primary-color);
-    overflow-y: hidden;
 }
 
 * {
